updated Prof Neu's comments

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1808,3 +1808,17 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       reportNumber   = "FERMILAB-CONF-11-354-E",
       SLACcitation   = "%%CITATION = ARXIV:1107.5518;%%",
 }
+
+@article{Schalicke:2011zz,
+      author         = "Schalicke, Andreas and Bagulya, Alexander and Dale, Orjan
+                        and Dupertuis, Frederic and Ivanchenko, Vladimir and
+                        others",
+      title          = "{Geant4 electromagnetic physics for the LHC and other HEP
+                        applications}",
+      journal        = "J.Phys.Conf.Ser.",
+      volume         = "331",
+      pages          = "032029",
+      doi            = "10.1088/1742-6596/331/3/032029",
+      year           = "2011",
+      SLACcitation   = "%%CITATION = 00462,331,032029;%%",
+}
